--- a/chainlink example.env
+++ b/chainlink example.env
@@ -3,11 +3,11 @@ DATABASE_URL=postgresql://postgres:password@postgres:5432/chainlink?sslmode=disa
 
 ROOT=/chainlink
 LOG_LEVEL=debug
-ETH_CHAIN_ID=5
+ETH_CHAIN_ID=4
 MIN_OUTGOING_CONFIRMATIONS=2
 LINK_CONTRACT_ADDRESS=0x01BE23585060835E02B77ef475b0Cc51aA1e0709
 CHAINLINK_TLS_PORT=0
 SECURE_COOKIES=false
 GAS_UPDATER_ENABLED=false
-ETH_URL=wss://goerli.infura.io/ws/v3/9658b9d1524c4d249c075f0d1a6b2c9e
+ETH_URL=wss://rinkeby-light.eth.linkpool.io/ws
 ALLOW_ORIGINS=*
